--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "wangeditor": "^4.7.10"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.4",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/echarts": "^4.9.12",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
+    "cz-customizable": "^6.3.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "sass": "^1.45.0",
